[package]
name = "RedStart"
version = "0.0.9"
authors = [
	"Gregor Reitzenstein <dean4devil@paranoidlabs.org>",
	"Harald Seiler <h.w.seiler@gmx.de>",
	"Maximilian Zander <zandemax@zandemax.de>"
]
build = "build.rs"

[dependencies]
hyper = "0.5.2"
iron = "0.1.17"
url = "0.2.35"
rustc-serialize = "0.3.14"
rand = "0.3.8"
toml = "0.1.20"
cookie = "0.1.20"
ldap = "0.0.1"
mysql = "0.13.0"
